# MPC-D-CBF

./: .gitignore  README.md  run_simulation.sh
.catkin_tools/profiles/default/: devel_collisions.txt
local_planner/: CMakeLists.txt
scene/: CMakeLists.txt
src/MPC-D-CBF/: README.md
src/MPC-D-CBF/global_path_publisher/launch/: pub_global_path.launch
src/MPC-D-CBF/global_path_publisher/src/: global_path_publisher.cpp
src/MPC-D-CBF/local_map/include/: ellipse.hpp
src/MPC-D-CBF/local_planner/scripts/: local_planner.py
src/MPC-D-CBF/obs_param/src/: obs_kf.cpp
src/MPC-D-CBF/scene/: CMakeLists.txt
src/MPC-D-CBF/scene/launch/: dynamic.launch  movetest_node.launch  start.launch
src/MPC-D-CBF/scene/rviz_config/: simulation.rviz
src/MPC-D-CBF/scene/src/: movetest.cpp  pseudo_odom.cpp
src/MPC-D-CBF/scene/worlds/: world2.world
src/pedsim_ros_with_gazebo/: README.md
src/pedsim_ros_with_gazebo/pedsim_gazebo_plugin/scripts/: pedsim_to_gazbo_world.py  spawn_pedsim_agents.py
src/pedsim_ros_with_gazebo/pedsim_simulator/launch/: jackal_ped_world.launch  robot.launch
src/pedsim_ros_with_gazebo/pedsim_simulator/rviz/: jackal_ped_world.rviz  jackal_ped_world_body_frame.rviz
src/pedsim_ros_with_gazebo/pedsim_simulator/scenarios/: eng_hall.xml
src/pedsim_ros_with_gazebo/pedsim_simulator/src/: simulator.cpp
src/pedsim_ros_with_gazebo/pesudo_motion_capture/: CMakeLists.txt  package.xml
src/pedsim_ros_with_gazebo/pesudo_motion_capture/script/: track_ped_pub.py
(+1 files in other folders)
